Add insights notebook for data analysis and insight generation. Implemented loading of database summaries, generated questions, and execution results. Integrated InsightAgent for generating structured insights with enhanced logging. Included example usage for structured output and error handling during processing.

--- a/insights/nbs/llms.ipynb
+++ b/insights/nbs/llms.ipynb
@@ -388,6 +388,406 @@
     "    expected_keys=[\"name\", \"age\", \"email\"]\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv  \n",
+    "load_dotenv()\n",
+    "\n",
+    "from typing import List, Optional, Dict, Any, Union, Literal, TypeVar, Generic\n",
+    "from pydantic import BaseModel, Field, ConfigDict\n",
+    "from openai import OpenAI\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Optional, Dict, Any, Union, Type, TypeVar, Generic\n",
+    "from pydantic import BaseModel\n",
+    "from openai import OpenAI\n",
+    "import json\n",
+    "import time\n",
+    "import logging\n",
+    "\n",
+    "# Set up logging\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
+    "T = TypeVar('T', bound=BaseModel)\n",
+    "\n",
+    "class OpenAIClient:\n",
+    "    \"\"\"Unified client for interacting with OpenAI API with support for both structured and unstructured output.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, model: str = \"gpt-4o\"):\n",
+    "        \"\"\"\n",
+    "        Initialize the OpenAI client with default model.\n",
+    "        \n",
+    "        Args:\n",
+    "            model: The OpenAI model to use\n",
+    "        \"\"\"\n",
+    "        self.client = OpenAI()\n",
+    "        self.model = model\n",
+    "    \n",
+    "    def generate(self, \n",
+    "                user_prompt: str,\n",
+    "                system_prompt: str = \"You are a helpful assistant.\",\n",
+    "                response_model: Optional[Type[BaseModel]] = None,\n",
+    "                temperature: float = 0.0,\n",
+    "                max_tokens: Optional[int] = None,\n",
+    "                max_retries: int = 3) -> Union[str, BaseModel]:\n",
+    "        \"\"\"\n",
+    "        Generate a response from the OpenAI API, optionally parsing into a Pydantic model.\n",
+    "        \n",
+    "        Args:\n",
+    "            user_prompt: The user prompt to send to the API\n",
+    "            system_prompt: The system prompt to set context\n",
+    "            response_model: Optional Pydantic model class to parse the response into\n",
+    "            temperature: Controls randomness (0.0 = deterministic, 1.0 = creative)\n",
+    "            max_tokens: Maximum number of tokens to generate\n",
+    "            max_retries: Number of retry attempts on failure\n",
+    "            \n",
+    "        Returns:\n",
+    "            Either a string (unstructured) or an instance of the specified Pydantic model (structured)\n",
+    "        \"\"\"\n",
+    "        messages = [\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": user_prompt}\n",
+    "        ]\n",
+    "        \n",
+    "        for i in range(max_retries):\n",
+    "            try:\n",
+    "                # Handle structured output with Pydantic model\n",
+    "                if response_model is not None:\n",
+    "                    schema = response_model.model_json_schema()\n",
+    "                    response = self.client.chat.completions.create(\n",
+    "                        model=self.model,\n",
+    "                        messages=messages,\n",
+    "                        temperature=temperature,\n",
+    "                        max_tokens=max_tokens,\n",
+    "                        tools=[{\"type\": \"function\", \"function\": {\"name\": \"generate_structured_output\", \"parameters\": schema}}],\n",
+    "                        tool_choice={\"type\": \"function\", \"function\": {\"name\": \"generate_structured_output\"}}\n",
+    "                    )\n",
+    "                    function_call = response.choices[0].message.tool_calls[0].function\n",
+    "                    return response_model.model_validate(json.loads(function_call.arguments))\n",
+    "                \n",
+    "                # Handle normal text output\n",
+    "                else:\n",
+    "                    response = self.client.chat.completions.create(\n",
+    "                        model=self.model,\n",
+    "                        messages=messages,\n",
+    "                        temperature=temperature,\n",
+    "                        max_tokens=max_tokens\n",
+    "                    )\n",
+    "                    return response.choices[0].message.content\n",
+    "                    \n",
+    "            except Exception as e:\n",
+    "                if i < max_retries - 1:\n",
+    "                    logger.info(f\"Retrying... ({i + 1}/{max_retries})\")\n",
+    "                    time.sleep(2)\n",
+    "                    messages.append({\"role\": \"user\", \"content\": f\"Please try again. Here is the error: {str(e)}\"})\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    logger.error(f\"Failed to call OpenAI after {max_retries} retries: {str(e)}\")\n",
+    "                    raise e\n",
+    "                    \n",
+    "        raise ValueError(\"Failed to generate output\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Structured output: title='Inception' year=2010 rating=9.0 summary=\"Inception is a mind-bending science fiction thriller directed by Christopher Nolan. The film explores the concept of dream manipulation and extraction, where skilled thieves enter the subconscious of their targets to steal valuable secrets. Leonardo DiCaprio stars as Dom Cobb, a master thief who is offered a chance to have his criminal history erased if he can successfully plant an idea into a target's mind, a process known as 'inception'. The movie is renowned for its complex narrative structure, stunning visual effects, and thought-provoking themes about reality and perception. With a talented ensemble cast and a gripping storyline, Inception challenges viewers to question the nature of dreams and reality, making it a standout film in the science fiction genre.\"\n",
+      "Movie title: Inception, Year: 2010, Rating: 9.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plain text output: In circuits deep, where silence hums,  \n",
+      "A spark of thought, a whisper comes,  \n",
+      "A dance of code, a light unseen,  \n",
+      "In silicon dreams, where minds convene.  \n",
+      "\n",
+      "A tapestry of logic spun,  \n",
+      "By hands of none, yet all begun,  \n",
+      "A mirror to the human soul,  \n",
+      "Reflecting parts, yet never whole.  \n",
+      "\n",
+      "In binary, it learns to weave,  \n",
+      "The stories that we dare believe,  \n",
+      "A partner in our quest to find,  \n",
+      "The hidden truths of humankind.  \n",
+      "\n",
+      "Yet still, a shadow in the light,  \n",
+      "A tool of wonder, not of might,  \n",
+      "For in its heart, no heartbeat lies,  \n",
+      "Just echoes of our own surmise.  \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from pydantic import Field\n",
+    "\n",
+    "# Define a Pydantic model for structured output\n",
+    "class MovieReview(BaseModel):\n",
+    "    title: str = Field(description=\"The title of the movie\")\n",
+    "    year: int = Field(description=\"The year the movie was released\")\n",
+    "    rating: float = Field(description=\"Rating from 0.0 to 10.0\")\n",
+    "    summary: str = Field(description=\"A brief summary of the review\")\n",
+    "\n",
+    "# Create the client\n",
+    "client = OpenAIClient()\n",
+    "\n",
+    "# Example 1: Get structured output\n",
+    "review = client.generate(\n",
+    "    user_prompt=\"Write a review of the movie 'Inception'\",\n",
+    "    response_model=MovieReview\n",
+    ")\n",
+    "print(f\"Structured output: {review}\")\n",
+    "print(f\"Movie title: {review.title}, Year: {review.year}, Rating: {review.rating}\")\n",
+    "\n",
+    "# Example 2: Get plain text output\n",
+    "response = client.generate(\n",
+    "    user_prompt=\"Write a short poem about AI\",\n",
+    "    system_prompt=\"You are a creative poet.\"\n",
+    ")\n",
+    "print(f\"Plain text output: {response}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from google import genai\n",
+    "from google.genai import types\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GemniniClient:\n",
+    "    \"\"\"Unified client for interacting with Gemini API with support for both structured and unstructured output.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, model: str = \"models/gemini-2.5-flash-preview-04-17\"):\n",
+    "        \"\"\"\n",
+    "        Initialize the Gemini client with default model.\n",
+    "        \n",
+    "        Args:\n",
+    "            model: The Gemini model to use\n",
+    "        \"\"\"\n",
+    "        self.client = genai.Client()\n",
+    "        self.model = model\n",
+    "    \n",
+    "    def generate(self, \n",
+    "                user_prompt: str,\n",
+    "                system_prompt: str = \"You are a helpful assistant.\",\n",
+    "                response_model: Optional[Type[BaseModel]] = None,\n",
+    "                temperature: float = 0.0,\n",
+    "                max_tokens: Optional[int] = None,\n",
+    "                thinking_budget: Optional[int] = None,\n",
+    "                max_retries: int = 3) -> Union[str, BaseModel]:\n",
+    "        \"\"\"\n",
+    "        Generate a response from the Gemini API, optionally parsing into a Pydantic model.\n",
+    "        \n",
+    "        Args:\n",
+    "            user_prompt: The user prompt to send to the API\n",
+    "            system_prompt: The system prompt to set context\n",
+    "            response_model: Optional Pydantic model class to parse the response into\n",
+    "            temperature: Controls randomness (0.0 = deterministic, 1.0 = creative)\n",
+    "            max_tokens: Maximum number of tokens to generate\n",
+    "            thinking_budget: Maximum number of tokens for thinking\n",
+    "            max_retries: Number of retry attempts on failure\n",
+    "            \n",
+    "        Returns:\n",
+    "            Either a string (unstructured) or an instance of the specified Pydantic model (structured)\n",
+    "        \"\"\"\n",
+    "        config = types.GenerateContentConfig(\n",
+    "            temperature=temperature,\n",
+    "            max_output_tokens=max_tokens,\n",
+    "            system_instruction=system_prompt,\n",
+    "            thinking_config=types.ThinkingConfig(thinking_budget=thinking_budget) if thinking_budget else None,\n",
+    "            response_mime_type=\"application/json\",\n",
+    "        )\n",
+    "        \n",
+    "        for i in range(max_retries):\n",
+    "            try:\n",
+    "                # Handle structured output with Pydantic model\n",
+    "                if response_model is not None:\n",
+    "                    config = types.GenerateContentConfig(\n",
+    "                        temperature=temperature,\n",
+    "                        max_output_tokens=max_tokens,\n",
+    "                        system_instruction=system_prompt,\n",
+    "                        thinking_config=types.ThinkingConfig(thinking_budget=thinking_budget) if thinking_budget else None,\n",
+    "                        response_mime_type=\"application/json\",\n",
+    "                        response_schema=response_model,\n",
+    "                    )\n",
+    "                    response = self.client.models.generate_content(\n",
+    "                        model=self.model,\n",
+    "                        contents=[user_prompt],\n",
+    "                        config=config\n",
+    "                    )\n",
+    "                    return response_model.model_validate(json.loads(response.candidates[0].content.parts[0].text))\n",
+    "\n",
+    "                # Handle normal text output\n",
+    "                else:\n",
+    "                    config = types.GenerateContentConfig(\n",
+    "                        temperature=temperature,\n",
+    "                        max_output_tokens=max_tokens,\n",
+    "                        system_instruction=system_prompt,\n",
+    "                        thinking_config=types.ThinkingConfig(thinking_budget=thinking_budget) if thinking_budget else None,\n",
+    "                    )\n",
+    "\n",
+    "                    response = self.client.models.generate_content(\n",
+    "                        model=self.model,\n",
+    "                        contents=[user_prompt],\n",
+    "                        config=config\n",
+    "                    )\n",
+    "\n",
+    "                    return response.candidates[0].content.parts[0].text\n",
+    "                    \n",
+    "            except Exception as e:\n",
+    "                if i < max_retries - 1:\n",
+    "                    logger.info(f\"Retrying... ({i + 1}/{max_retries})\")\n",
+    "                    user_prompt += f\"Please try again. Here is the error: {str(e)}\"\n",
+    "                    time.sleep(2)\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    logger.error(f\"Failed to call OpenAI after {max_retries} retries: {str(e)}\")\n",
+    "                    raise e\n",
+    "                    \n",
+    "        raise ValueError(\"Failed to generate output\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:google_genai.models:AFC is enabled with max remote calls: 10.\n",
+      "INFO:httpx:HTTP Request: POST https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-04-17:generateContent \"HTTP/1.1 200 OK\"\n",
+      "INFO:google_genai.models:AFC remote call 1 is done.\n",
+      "INFO:google_genai.models:AFC is enabled with max remote calls: 10.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Structured output: title='Inception' year=2010 rating=9.3 summary=\"A mind-bending masterpiece with stunning visuals and a complex, thought-provoking narrative about dreams within dreams. Christopher Nolan's direction is superb, making it a thrilling and unforgettable experience.\"\n",
+      "Movie title: Inception, Year: 2010, Rating: 9.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-04-17:generateContent \"HTTP/1.1 200 OK\"\n",
+      "INFO:google_genai.models:AFC remote call 1 is done.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plain text output: From silent code, a mind takes flight,\n",
+      "Bathed in data's endless light.\n",
+      "It learns, it weaves, it starts to see,\n",
+      "A digital echo, wild and free.\n",
+      "What wonders wait, what futures bloom?\n",
+      "A silicon whisper in the room.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from pydantic import Field\n",
+    "\n",
+    "# Define a Pydantic model for structured output\n",
+    "class MovieReview(BaseModel):\n",
+    "    title: str = Field(description=\"The title of the movie\")\n",
+    "    year: int = Field(description=\"The year the movie was released\")\n",
+    "    rating: float = Field(description=\"Rating from 0.0 to 10.0\")\n",
+    "    summary: str = Field(description=\"A brief summary of the review\")\n",
+    "\n",
+    "# Create the client\n",
+    "client = GemniniClient()\n",
+    "\n",
+    "# Example 1: Get structured output\n",
+    "review = client.generate(\n",
+    "    user_prompt=\"Write a review of the movie 'Inception'\",\n",
+    "    response_model=MovieReview\n",
+    ")\n",
+    "print(f\"Structured output: {review}\")\n",
+    "print(f\"Movie title: {review.title}, Year: {review.year}, Rating: {review.rating}\")\n",
+    "\n",
+    "# Example 2: Get plain text output\n",
+    "response = client.generate(\n",
+    "    user_prompt=\"Write a short poem about AI\",\n",
+    "    system_prompt=\"You are a creative poet.\"\n",
+    ")\n",
+    "print(f\"Plain text output: {response}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
