Add insights_consolidation notebook for consolidating and synthesizing insights using OpenAI embeddings. Implemented loading of database summaries, generated questions, and execution results. Integrated InsightConsolidationAgent for deduplication and synthesis, along with enhanced logging for traceability. Added report generation capabilities with ReportGeneratingAgent for creating Markdown reports from consolidated insights.

--- a/insights/nbs/insights.ipynb
+++ b/insights/nbs/insights.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,69 +47,66 @@
     "    analysis_questions = questions_input.get(\"questions\", [])\n",
     "\n",
     "with open(execution_results_path, 'r', encoding='utf-8') as f:\n",
-    "    execution_results = json.load(f)"
+    "    execution_results = json.load(f)\n",
+    "    execution_results = [ProcessedQuestionResult(**result) for result in execution_results]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:insights.utils:InsightAgent initialized.\n"
+      "INFO:insights.utils:InsightAgent initialized.\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "WARNING:insights.utils:Generating EXECUTION_INFO insight for failed question ID: Q-c94fa6b2-f2a3-4181-b1e0-e0c1272cbb12\n",
+      "WARNING:insights.utils:Generating EXECUTION_INFO insight for failed question ID: Q-ed62ac66-0d60-4ae1-8fbc-4eee8f1aeada\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:insights.utils:Generating OBSERVATION insight for empty result set for question ID: Q-d18b20bc-3420-46a8-bd45-0963a77b2a5f\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "WARNING:insights.utils:Generating EXECUTION_INFO insight for failed question ID: Q-4f7154bd-39cb-4409-9e6f-9130c298a0c8\n",
+      "WARNING:insights.utils:Generating EXECUTION_INFO insight for failed question ID: Q-59a89a2d-9ce5-4047-8d88-f405498f8986\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
      ]
     }
    ],
    "source": [
-    "insight_agent = InsightAgent()"
+    "insight_agent = InsightAgent()\n",
+    "insights = insight_agent.generate_insights(\n",
+    "    processed_questions=execution_results,\n",
+    "    db_summary=db_summary,\n",
+    "    original_user_query=None\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:insights.utils:Calling LLM for insight generation for question ID: Q-0a77944e-9ab9-4c00-9138-8333c8c1447b\n",
-      "INFO:google_genai.models:AFC is enabled with max remote calls: 10.\n",
-      "INFO:httpx:HTTP Request: POST https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-04-17:generateContent \"HTTP/1.1 200 OK\"\n",
-      "INFO:google_genai.models:AFC remote call 1 is done.\n"
-     ]
-    },
-    {
-     "ename": "ValidationError",
-     "evalue": "1 validation error for StructuredInsight\ntier\n  Input should be 'Observation', 'Comparison', 'Trend', 'Anomaly', 'Contribution', 'Relationship', 'Data Quality' or 'Execution Info' [type=enum, input_value='Tier 1: Key Finding', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.11/v/enum",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValidationError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m result \u001b[38;5;129;01min\u001b[39;00m execution_results:\n\u001b[32m      2\u001b[39m     res = ProcessedQuestionResult(**result)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     insight = \u001b[43minsight_agent\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgenerate_insights\u001b[49m\u001b[43m(\u001b[49m\u001b[43mres\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb_summary\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/play/experiments/insights/insights/agents/insight_agent.py:207\u001b[39m, in \u001b[36mInsightAgent.generate_insights\u001b[39m\u001b[34m(self, processed_question, db_summary, original_user_query)\u001b[39m\n\u001b[32m    204\u001b[39m logger.debug(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mParsing LLM response for question ID: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mqid\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    205\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    206\u001b[39m     \u001b[38;5;66;03m# Validate and structure using Pydantic, adding provenance\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m207\u001b[39m     insight = \u001b[43mStructuredInsight\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    208\u001b[39m \u001b[43m        \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mllm_response_str\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    209\u001b[39m \u001b[43m        \u001b[49m\u001b[43mquestion_id\u001b[49m\u001b[43m=\u001b[49m\u001b[43mqid\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    210\u001b[39m \u001b[43m        \u001b[49m\u001b[43mquestion_text\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprocessed_question\u001b[49m\u001b[43m.\u001b[49m\u001b[43mquestion_text\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    211\u001b[39m \u001b[43m        \u001b[49m\u001b[43msource_sql\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprocessed_question\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgenerated_sql\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    212\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdata_row_count\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprocessed_question\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecution_row_count\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    213\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdata_column_names\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprocessed_question\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecution_column_names\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    214\u001b[39m \u001b[43m        \u001b[49m\u001b[43mexecution_time\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprocessed_question\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecution_time\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    215\u001b[39m \u001b[43m        \u001b[49m\u001b[43merror_info\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# Handled above\u001b[39;49;00m\n\u001b[32m    216\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    217\u001b[39m     insights.append(insight)\n\u001b[32m    220\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m json.JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m json_error:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/play/experiments/insights/.venv/lib/python3.12/site-packages/pydantic/main.py:253\u001b[39m, in \u001b[36mBaseModel.__init__\u001b[39m\u001b[34m(self, **data)\u001b[39m\n\u001b[32m    251\u001b[39m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[32m    252\u001b[39m __tracebackhide__ = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m253\u001b[39m validated_self = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    254\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m validated_self:\n\u001b[32m    255\u001b[39m     warnings.warn(\n\u001b[32m    256\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mA custom validator is returning a value other than `self`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m\n\u001b[32m    257\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mReturning anything other than `self` from a top level model validator isn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt supported when validating via `__init__`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    258\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mSee the `model_validator` docs (https://docs.pydantic.dev/latest/concepts/validators/#model-validators) for more details.\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    259\u001b[39m         stacklevel=\u001b[32m2\u001b[39m,\n\u001b[32m    260\u001b[39m     )\n",
-      "\u001b[31mValidationError\u001b[39m: 1 validation error for StructuredInsight\ntier\n  Input should be 'Observation', 'Comparison', 'Trend', 'Anomaly', 'Contribution', 'Relationship', 'Data Quality' or 'Execution Info' [type=enum, input_value='Tier 1: Key Finding', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.11/v/enum"
-     ]
-    }
-   ],
-   "source": [
-    "for result in execution_results:\n",
-    "    res = ProcessedQuestionResult(**result)\n",
-    "    insight = insight_agent.generate_insights(res, db_summary)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "insight[0]"
+    "insights = [insight.model_dump() for insight in insights]\n",
+    "\n",
+    "with open('insights.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(insights, f, indent=4, ensure_ascii=False)"
    ]
   },
   {
